<resources>
    <string name="app_name">CIS298Assignment2</string>

    <string name="convert">Convert:</string>
    <string name="convert_button">CONVERT</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="action_settings">Settings</string>
    <string name="celsius">Celsius</string>
    <string name="farenheit">Farenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="rankin">Rankin</string>
</resources>
